// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Box > it works with elevations 1`] = `
<div
  class="_Box_d62db4 _elevation-0_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with elevations 2`] = `
<div
  class="_Box_d62db4 _elevation-1_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with elevations 3`] = `
<div
  class="_Box_d62db4 _elevation-2_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with elevations 4`] = `
<div
  class="_Box_d62db4 _elevation-3_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with elevations 5`] = `
<div
  class="_Box_d62db4 _elevation-4_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 1`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 2`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-1_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 3`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-2_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 4`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-3_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 5`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-4_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 1`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 2`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-1_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 3`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-2_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 4`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-3_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 5`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-4_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 1`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-0_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 2`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-1_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 3`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-2_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 4`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-3_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 5`] = `
<div
  class="_Box_d62db4 _elevation-none_d62db4 _gutter-4_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
  data-testid="Box"
>
  Hello world
</div>
`;
